--- a/index.html
+++ b/index.html
@@ -8,6 +8,53 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
+    <!-- header section -->
+    <header>
+        <nav>
+            <div class="header_brand">
+                <img src="images/icons/brand-icon.png" alt="hero travel brand logo image">
+                <h1 class="title1">Hero <span id="brand_title">Travel</span></h1>
+            </div>
+            <input type="checkbox" id="dropdown_btn">
+            <label for="dropdown_btn" class="dropdown_btn_icon">
+                <i class="fa fa-align-justify"></i>
+            </label>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Packages</a></li>
+                <li><a href="#">Testimonial</a></li>
+                <li><a href="#">Blog</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </nav>
 
+        <div class="banner">
+            <div class="banner_container">
+                <h1 class="banner_title">Explore Your Travel</h1>
+                <p class="banner_description">Discover new destinations, get travel tips, and receive personalized recommendations to make planning your next journey easy and inspiring.</p>
+                <div class="banner_container_form">
+                    <input type="text" placeholder="Where go">
+                    <select name="explore_date" id="explore_date">
+                        <option value="">When</option>
+                        <option value="this_weekend">This Weekend</option>
+                        <option value="next_week">Next Week</option>
+                        <option value="next_month">Next Month</option>
+                        <option value="specific_date">Any Specific Date</option>
+                    </select>
+                    <select name="explore_type" id="explore_type">
+                        <option value="">Select Type</option>
+                        <option value="adventure">Adventure</option>
+                        <option value="relaxation">Relaxation</option>
+                        <option value="cultural">Cultural</option>
+                        <option value="family">Family</option>
+                    </select>
+                    <button class="btn">
+                        <img src="images/icons/search_icon.svg" alt="search icon image">
+                        <p>Find Now</p>
+                    </button>
+                </div>
+            </div>
+        </div>
+    </header>
 </body>
 </html>
