Add CSS part for header section

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <!-- header section -->
-    <header>
+    <header class="header">
         <nav>
             <div class="header_brand">
                 <img src="images/icons/brand-icon.png" alt="hero travel brand logo image">
