Add HTML part for tours section

--- a/index.html
+++ b/index.html
@@ -56,5 +56,25 @@
             </div>
         </div>
     </header>
+
+
+    <!-- tours section -->
+     <section class="tours">
+        <div class="tours_container">
+            <h1 class="title1">Our Popular Tours</h1>
+            <p class="description1">Discover the world with our carefully curated tours, designed to offer unforgettable experiences. Whether you're looking for adventure, relaxation, or cultural exploration, we have something for everyone.</p>
+            <ul>
+                <li class="list1">Adventure Escapes: Dive into thrilling outdoor activities like hiking, rafting, and mountain climbing.</li>
+                <li class="list1">Relaxation Retreats: Unwind at serene beach resorts, spas, and scenic getaways.</li>
+                <li class="list1">Cultural Journeys: Explore the rich history, traditions, and landmarks of diverse destinations.</li>
+            </ul>
+            <p class="description2">Join us on one of our popular tours and create memories that will last a lifetime!</p>
+            <button class="btn">Read More</button>
+        </div>
+        <div class="tours_container">
+            <img src="images/tour.png" alt="one big mountain image">
+        </div>
+
+     </section>
 </body>
 </html>
