Add CSS part for tours section

--- a/index.html
+++ b/index.html
@@ -71,10 +71,9 @@
             <p class="description2">Join us on one of our popular tours and create memories that will last a lifetime!</p>
             <button class="btn">Read More</button>
         </div>
-        <div class="tours_container">
+        <div class="tours_img_container">
             <img src="images/tour.png" alt="one big mountain image">
         </div>
-
      </section>
 </body>
 </html>
