Add HTML part for destination section

--- a/index.html
+++ b/index.html
@@ -59,21 +59,64 @@
 
 
     <!-- tours section -->
-     <section class="tours">
-        <div class="tours_container">
-            <h1 class="title1">Our Popular Tours</h1>
-            <p class="description1">Discover the world with our carefully curated tours, designed to offer unforgettable experiences. Whether you're looking for adventure, relaxation, or cultural exploration, we have something for everyone.</p>
-            <ul>
-                <li class="list1">Adventure Escapes: Dive into thrilling outdoor activities like hiking, rafting, and mountain climbing.</li>
-                <li class="list1">Relaxation Retreats: Unwind at serene beach resorts, spas, and scenic getaways.</li>
-                <li class="list1">Cultural Journeys: Explore the rich history, traditions, and landmarks of diverse destinations.</li>
-            </ul>
-            <p class="description2">Join us on one of our popular tours and create memories that will last a lifetime!</p>
-            <button class="btn">Read More</button>
+    <section class="tours">
+    <div class="tours_container">
+        <h1 class="title1">Our Popular Tours</h1>
+        <p class="description1">Discover the world with our carefully curated tours, designed to offer unforgettable experiences. Whether you're looking for adventure, relaxation, or cultural exploration, we have something for everyone.</p>
+        <ul>
+            <li class="list1">Adventure Escapes: Dive into thrilling outdoor activities like hiking, rafting, and mountain climbing.</li>
+            <li class="list1">Relaxation Retreats: Unwind at serene beach resorts, spas, and scenic getaways.</li>
+            <li class="list1">Cultural Journeys: Explore the rich history, traditions, and landmarks of diverse destinations.</li>
+        </ul>
+        <p class="description2">Join us on one of our popular tours and create memories that will last a lifetime!</p>
+        <button class="btn">Read More</button>
+    </div>
+    <div class="tours_img_container">
+        <img src="images/tour.png" alt="one big mountain image">
+    </div>
+    </section>
+
+
+    <!-- destination section -->
+    <section class="destination">
+        <div class="destination_container">
+            <h1 class="title1">Choose Your Destination</h1>
+            <p class="description1">Find the ideal location for your next journey, with options tailored to your preferences—whether you're looking for excitement, relaxation, or cultural discovery.</p>
         </div>
-        <div class="tours_img_container">
-            <img src="images/tour.png" alt="one big mountain image">
+        <div class="destination_img_container_row1">
+        <div class="destination_img_box">
+            <h1 class="destination_img_title">Maldives</h1>
+            <img src="images/Maldives.png" alt="Maldives resort image">
         </div>
-     </section>
+        <div class="destination_img_box">
+            <h1 class="destination_img_title">Indonesia</h1>
+            <img src="images/Indonesia.png" alt="Indonesia resort image">
+        </div>
+        </div>
+        <div class="destination_img_container_row2">
+        <div class="destination_img_box">
+            <h1 class="destination_img_title">Srilanka</h1>
+            <img src="images/Srilanka.png" alt="Srilanka mountain image">
+        </div>
+        <div class="destination_img_box">
+            <h1 class="destination_img_title">North America</h1>
+            <img src="images/North-America.png" alt="North America palace image">
+        </div>
+        <div class="destination_img_box">
+            <h1 class="destination_img_title">Kashmir</h1>
+            <img src="images/Kashmir.png" alt="Kashmir mountain image">
+        </div>
+        </div>
+        <div class="destination_img_container_row3">
+        <div class="destination_img_box">
+            <h1 class="destination_img_title">Bangladesh</h1>
+            <img src="images/Bangladesh.png" alt="Bangladesh nature view image">
+        </div>
+        <div class="destination_img_box">
+            <h1 class="destination_img_title">Bandarban</h1>
+            <img src="images/Bandarban.png" alt="Bandarban nature view image">
+        </div>
+        </div>
+    </section>
 </body>
 </html>
