--- a/index.html
+++ b/index.html
@@ -79,43 +79,44 @@
 
     <!-- destination section -->
     <section class="destination">
-        <div class="destination_container">
+        <div class="destination_header">
             <h1 class="title1">Choose Your Destination</h1>
             <p class="description1">Find the ideal location for your next journey, with options tailored to your preferences—whether you're looking for excitement, relaxation, or cultural discovery.</p>
         </div>
-        <div class="destination_img_container_row1">
-        <div class="destination_img_box">
-            <h1 class="destination_img_title">Maldives</h1>
-            <img src="images/Maldives.png" alt="Maldives resort image">
+
+        <div class="destination_container_row1">
+            <div class="destination_img_box">
+                <h1 class="destination_img_title">Maldives</h1>
+                <img src="images/Maldives.png" alt="Maldives resort image">
+            </div>
+            <div class="destination_img_box">
+                <h1 class="destination_img_title">Indonesia</h1>
+                <img src="images/Indonesia.png" alt="Indonesia resort image">
+            </div>
         </div>
-        <div class="destination_img_box">
-            <h1 class="destination_img_title">Indonesia</h1>
-            <img src="images/Indonesia.png" alt="Indonesia resort image">
+        <div class="destination_container_row2">
+            <div class="destination_img_box">
+                <h1 class="destination_img_title">Srilanka</h1>
+                <img src="images/Srilanka.png" alt="Srilanka mountain image">
+            </div>
+            <div class="destination_img_box">
+                <h1 class="destination_img_title">North America</h1>
+                <img src="images/North-America.png" alt="North America palace image">
+            </div>
+            <div class="destination_img_box">
+                <h1 class="destination_img_title">Kashmir</h1>
+                <img src="images/Kashmir.png" alt="Kashmir mountain image">
+            </div>
         </div>
-        </div>
-        <div class="destination_img_container_row2">
-        <div class="destination_img_box">
-            <h1 class="destination_img_title">Srilanka</h1>
-            <img src="images/Srilanka.png" alt="Srilanka mountain image">
-        </div>
-        <div class="destination_img_box">
-            <h1 class="destination_img_title">North America</h1>
-            <img src="images/North-America.png" alt="North America palace image">
-        </div>
-        <div class="destination_img_box">
-            <h1 class="destination_img_title">Kashmir</h1>
-            <img src="images/Kashmir.png" alt="Kashmir mountain image">
-        </div>
-        </div>
-        <div class="destination_img_container_row3">
-        <div class="destination_img_box">
-            <h1 class="destination_img_title">Bangladesh</h1>
-            <img src="images/Bangladesh.png" alt="Bangladesh nature view image">
-        </div>
-        <div class="destination_img_box">
-            <h1 class="destination_img_title">Bandarban</h1>
-            <img src="images/Bandarban.png" alt="Bandarban nature view image">
-        </div>
+        <div class="destination_container_row3">
+            <div class="destination_img_box">
+                <h1 class="destination_img_title">Bangladesh</h1>
+                <img src="images/Bangladesh.png" alt="Bangladesh nature view image">
+            </div>
+            <div class="destination_img_box">
+                <h1 class="destination_img_title">Bandarban</h1>
+                <img src="images/Bandarban.png" alt="Bandarban nature view image">
+            </div>
         </div>
     </section>
 </body>
