Add HTML part for choose us section

--- a/index.html
+++ b/index.html
@@ -119,5 +119,32 @@
             </div>
         </div>
     </section>
+
+
+
+    <!-- choose us section -->
+    <section class="choose">
+        <div class="choose_container">
+            <h1 class="title1">Why Choose Us</h1>
+            <p class="description1">We offer personalized travel experiences, expert planning, and exceptional customer support to ensure your journey is seamless and unforgettable.</p>
+        </div>
+        <div class="choose_container">
+            <div class="choose_container_card">
+                <img src="images/icons/hotel_icon.svg" alt="hotels icon image">
+                <h1 class="title2">Handpicked Hotels</h1>
+                <p class="description2">Enjoy stays at top-rated hotels, chosen for their comfort, quality, and unique local appeal, ensuring a memorable experience.</p>
+            </div>
+            <div class="choose_container_card">
+                <img src="images/icons/map_icon.svg" alt="map icon image">
+                <h1 class="title2">World Class Service</h1>
+                <p class="description2">Experience top-tier service with personalized attention and expert support, ensuring a seamless and unforgettable journey.</p>
+            </div>
+            <div class="choose_container_card">
+                <img src="images/icons/priceTag_icon.svg" alt="% price tag icon image">
+                <h1 class="title2">Best Price Guarantee</h1>
+                <p class="description2">We ensure the best rates for your trip, offering unbeatable prices without compromising on quality or service.</p>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
