Add HTML part for deals section

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
     <!-- destination section -->
     <section class="destination">
-        <div class="destination_header">
+        <div class="section_header">
             <h1 class="title1">Choose Your Destination</h1>
             <p class="description1">Find the ideal location for your next journey, with options tailored to your preferences—whether you're looking for excitement, relaxation, or cultural discovery.</p>
         </div>
@@ -124,7 +124,7 @@
 
     <!-- choose us section -->
     <section class="choose">
-        <div class="choose_header">
+        <div class="section_header">
             <h1 class="title1">Why Choose Us</h1>
             <p class="description1">We offer personalized travel experiences, expert planning, and exceptional customer support to ensure your journey is seamless and unforgettable.</p>
         </div>
@@ -143,6 +143,82 @@
                 <img src="images/icons/priceTag_icon.svg" alt="% price tag icon image">
                 <h1 class="title2">Best Price Guarantee</h1>
                 <p class="description2">We ensure the best rates for your trip, offering unbeatable prices without compromising on quality or service.</p>
+            </div>
+        </div>
+    </section>
+
+
+
+    <!-- deals section -->
+    <section class="deals">
+        <div class="section_header">
+            <h1 class="title1">Deals & Discounts</h1>
+            <p class="description1">Take advantage of exclusive deals and discounts, offering great value on a wide range of travel packages and experiences.</p>
+        </div>
+        <div class="deals_container_1">
+            <div class="deals_container_box">
+                <div class="deals_box_header">
+                    <div class="deals_header_content">
+                        <img src="images/icons/clock_icon.svg" alt="clock icon image">
+                        <p class="description2">7 Day / 6 Night</p>
+                    </div>
+                    <div class="deals_header_content">
+                        <img src="images/icons/persons_icon.svg" alt="3 persons head icon image">
+                        <p class="description2">Max : 10</p>
+                    </div>
+                    <div class="deals_header_content">
+                        <img src="images/icons/location_icon.svg" alt="google map location icon image">
+                        <p class="description2">Bangladesh</p>
+                    </div>
+                </div>
+                <h1 class="title2">Tour To Bandarban</h1>
+                <p class="description2">Explore lush hills, waterfalls, and indigenous cultures in this serene, offbeat destination in Bangladesh.</p>
+                <p class="price">Price: $1300-$1500</p>
+                <button class="btn">Book Now</button>
+            </div>
+        </div>
+        <div class="deals_container_2">
+            <div class="deals_container_box">
+                <div class="deals_box_header">
+                    <div class="deals_header_content">
+                        <img src="images/icons/clock_icon.svg" alt="clock icon image">
+                        <p class="description2">7 Day / 6 Night</p>
+                    </div>
+                    <div class="deals_header_content">
+                        <img src="images/icons/persons_icon.svg" alt="3 persons head icon image">
+                        <p class="description2">Max : 10</p>
+                    </div>
+                    <div class="deals_header_content">
+                        <img src="images/icons/location_icon.svg" alt="google map location icon image">
+                        <p class="description2">Srilanka</p>
+                    </div>
+                </div>
+                <h1 class="title2">Tour To Maldives</h1>
+                <p class="description2">Relax in overwater villas, enjoy crystal-clear waters, and experience world-class snorkeling and diving.</p>
+                <p class="price">Price: $1100-$1400</p>
+                <button class="btn">Book Now</button>
+            </div>
+        </div>
+        <div class="deals_container_1">
+            <div class="deals_container_box">
+                <div class="deals_box_header">
+                    <div class="deals_header_content">
+                        <img src="images/icons/clock_icon.svg" alt="clock icon image">
+                        <p class="description2">7 Day / 6 Night</p>
+                    </div>
+                    <div class="deals_header_content">
+                        <img src="images/icons/persons_icon.svg" alt="3 persons head icon image">
+                        <p class="description2">Max : 10</p>
+                    </div>
+                    <div class="deals_header_content">
+                        <img src="images/icons/location_icon.svg" alt="google map location icon image">
+                        <p class="description2">India</p>
+                    </div>
+                </div>
+                <h1 class="title2">Tour To Kashmir</h1>
+                <p class="description2">Discover the beauty of snow-capped mountains, serene lakes, and vibrant gardens in this paradise on earth.</p>
+                <p class="price">Price: $1000-$1300</p>
+                <button class="btn">Book Now</button>
             </div>
         </div>
     </section>
