Add CSS part for deals section

--- a/index.html
+++ b/index.html
@@ -155,8 +155,8 @@
             <h1 class="title1">Deals & Discounts</h1>
             <p class="description1">Take advantage of exclusive deals and discounts, offering great value on a wide range of travel packages and experiences.</p>
         </div>
-        <div class="deals_container_1">
-            <div class="deals_container_box">
+        <div class="deals_odd_container">
+            <div class="deals_container_box deals_odd_box">
                 <div class="deals_box_header">
                     <div class="deals_header_content">
                         <img src="images/icons/clock_icon.svg" alt="clock icon image">
@@ -177,8 +177,8 @@
                 <button class="btn">Book Now</button>
             </div>
         </div>
-        <div class="deals_container_2">
-            <div class="deals_container_box">
+        <div class="deals_even_container">
+            <div class="deals_container_box deals_even_box">
                 <div class="deals_box_header">
                     <div class="deals_header_content">
                         <img src="images/icons/clock_icon.svg" alt="clock icon image">
@@ -199,8 +199,8 @@
                 <button class="btn">Book Now</button>
             </div>
         </div>
-        <div class="deals_container_1">
-            <div class="deals_container_box">
+        <div class="deals_odd_container">
+            <div class="deals_container_box deals_odd_box">
                 <div class="deals_box_header">
                     <div class="deals_header_content">
                         <img src="images/icons/clock_icon.svg" alt="clock icon image">
