Add HTML part for package section

--- a/index.html
+++ b/index.html
@@ -222,5 +222,23 @@
             </div>
         </div>
     </section>
+
+
+
+    <!-- package section -->
+    <section class="package">
+        <div class="package_container">
+            <h1 class="title1">A Simple Perfect Place <br>To Get Lost</h1>
+            <p class="description2">A perfect escape where you can disconnect, immerse yourself in nature, and find tranquility away from the hustle of daily life. Ideal for those seeking peace and serenity.</p>
+            <ul>
+                <li class="list2">Escape to a serene destination where nature's beauty surrounds you, offering a peaceful retreat from the everyday rush.</li>
+                <li class="list2">Find yourself in a hidden paradise, where time slows down and the world fades away, leaving only tranquility and calm.</li>
+            </ul>
+            <button class="btn">See More</button>
+        </div>
+        <div class="package_video_container">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/Cn4G2lZ_g2I?si=0Hs6yfSgqE5Fta4e" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div>
+    </section>
 </body>
 </html>
