Update HTML and CSS parts for deals section

--- a/index.html
+++ b/index.html
@@ -221,6 +221,7 @@
                 <button class="btn">Book Now</button>
             </div>
         </div>
+        <button class="btn deals_btn">See All Packages</button>
     </section>
 
 
