--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
             <button class="btn">See More</button>
         </div>
         <div class="package_video_container">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/Cn4G2lZ_g2I?si=0Hs6yfSgqE5Fta4e" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/Cn4G2lZ_g2I?si=0Hs6yfSgqE5Fta4e" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
     </section>
 </body>
