Add HTML part for newsletter section

--- a/index.html
+++ b/index.html
@@ -241,5 +241,26 @@
             <iframe src="https://www.youtube.com/embed/Cn4G2lZ_g2I?si=0Hs6yfSgqE5Fta4e" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
     </section>
+
+
+
+    <!-- newsletter section -->
+    <section class="newsletter">
+        <div class="newsletter_container">
+            <h1 class="title2">Newsletter</h1>
+            <p class="description2">Stay updated with our latest travel deals, tips, and exclusive offers by subscribing to our newsletter.</p>
+            <form action="#">
+                <input id="name" type="text" placeholder="Enter your name">
+                <input id="email" type="email" placeholder="Enter your email">
+                <button class="btn">Subscribe</button>
+            </form>
+        </div>
+        <div class="newsletter_img_container">
+            <div class="newsletter_box">
+                <p class="newsletter_box_description">Travel.com</p>
+                <h1 class="newsletter_box_title">Save up to 70%</h1>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
