Add CSS part for newsletter section

--- a/index.html
+++ b/index.html
@@ -247,8 +247,11 @@
     <!-- newsletter section -->
     <section class="newsletter">
         <div class="newsletter_container">
-            <h1 class="title2">Newsletter</h1>
-            <p class="description2">Stay updated with our latest travel deals, tips, and exclusive offers by subscribing to our newsletter.</p>
+            <div class="newsletter_container_header">
+                <h1 class="title2">Newsletter</h1>
+                <p class="description2">Stay updated with our latest travel deals, tips, and exclusive offers by subscribing to our newsletter.</p>
+            </div>
+            <hr>
             <form action="#">
                 <input id="name" type="text" placeholder="Enter your name">
                 <input id="email" type="email" placeholder="Enter your email">
