Update CSS part for common style section

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <!-- header section -->
     <header class="header">
         <nav>
-            <div class="header_brand">
-                <img src="images/icons/brand-icon.png" alt="hero travel brand logo image">
-                <h1 class="title1">Hero <span id="brand_title">Travel</span></h1>
+            <div class="brand_container">
+                <img class="brand_logo" src="images/icons/brand-icon.png" alt="hero travel brand logo image">
+                <h1 class="brand_title">Hero <span id="brand_title_text">Travel</span></h1>
             </div>
             <input type="checkbox" id="dropdown_btn">
             <label for="dropdown_btn" class="dropdown_btn_icon">
@@ -265,5 +265,10 @@
             </div>
         </div>
     </section>
+
+
+
+    <!-- footer section -->
+    footer.footer>
 </body>
 </html>
