Add HTML part for footer section

--- a/index.html
+++ b/index.html
@@ -269,6 +269,20 @@
 
 
     <!-- footer section -->
-    footer.footer>
+    <footer class="footer">
+        <div class="brand_container">
+            <img class="brand_logo" src="images/icons/brand-icon.png" alt="hero travel brand logo image">
+            <h1 class="brand_title">Hero <span id="brand_title_text">Travel</span></h1>
+        </div>
+        <p class="description2">Discover your next adventure with us! From handpicked destinations to exclusive deals, we offer the best in travel experiences. Follow us on social media and subscribe to our newsletter for updates. Let's make your dream journey a reality!</p>
+        <div class="footer_icons_container">
+            <img src="images/icons/twitter.svg" alt="twitter icon image">
+            <img src="images/icons/facebook.svg" alt="facebook icon image">
+            <img src="images/icons/instagram.svg" alt="instagram icon image">
+            <img src="images/icons/github.svg" alt="github icon image">
+        </div>
+        <hr>
+        <p class="footer_copyright">2017, All Rights Reserved.</p>
+    </footer>
 </body>
 </html>
